<resources>
    <string name="app_name">2 Lab Activity Ir Intent Klases</string>
    <string name="enterText">Įveskitę norimą tekstą</string>
    <string name="countWords">Suskaičiuokite žodžius</string>
    <string name="sendText">Siųsti tekstą</string>
    <string name="enteredText">Įvestas tekstas</string>
    <string name="save">Saugoti</string>
    <string name="yourText">Jūsų tekstas</string>
    <string name="finalText">Jūsų įvestame tekste: %1$s "" yra %2$d žodžių</string>
</resources>